--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<p>Hey, I'm AppComponent, my title is {{ title }} and I'm working</p>
+<h1>Hey, I'm AppComponent, my title is {{ title | uppercase }} and I'm working - I guess ?</h1>
 
+<p>Default country is : {{ defaultCountry }}</p>
 <div class=movie *ngFor="let movie of movies">
     <div *ngIf="movie.country == defaultCountry">
         <h2 class = "truc title"
@@ -11,7 +12,13 @@
         <h3>{{ movie.country }}</h3>
     </div>
 </div>
-<button 
-    (click)="toggleCountry()"
->
-    Filter</button>
+
+<ul id=filter>
+    <li (click)= "defaultCountry='all'" [ngClass]="{'active': defaultCountry=='all'}">
+        [all]</li>
+    <li (click)= "defaultCountry='us'" [ngClass]="{'active': defaultCountry=='us'}">
+        [us]</li>
+    <li (click)= "defaultCountry='it'" [ngClass]="{'active': defaultCountry=='it'}">
+        [it]</li>
+</ul>
+
