--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,12 @@
+$default-font-color: hsl(200, 75%, 75%);
+
 div {
     &.movie {
         min-width: 10em;
         width: auto;
         min-height: 5em;
         height: auto;
-
+        background-color: $default-font-color;
         h2 {
             &.title {
                 letter-spacing: 0.5em;
@@ -14,16 +16,26 @@ div {
     }
 }
 
-
-
 .old {
-    color: dodgerblue;
+    color: rgb(7, 82, 95);
 }
 
-.truc {
-    background-color: wheat;
-}
+#filter {
+    list-style-type: none;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    font-size: 1.5em;
+    
 
-.title{
-    font-style: italic;
+
+    li{
+        &.active{
+            font-weight: bold;
+        }
+
+    }
+    li:not(:last-child):after {
+        content: " -  ";
+    }
 }
