--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<h1>Hey, I'm AppComponent, my title is {{ title | uppercase }} and I'm working - I guess ?</h1>
+<h1>Hey, I'm AppComponent, my title is {{ title | uppercase }}</h1>
 
 <p>Default country is : {{ defaultCountry }}</p>
 <div class=movie *ngFor="let movie of movies">
-    <div *ngIf="movie.country == defaultCountry">
+    <div *ngIf="(movie.country == defaultCountry) || defaultCountry == 'all'">
         <h2 class = "truc title"
         [ngClass]="{'old': movie.year < 2000, 'title': true }"
         >
@@ -13,12 +13,9 @@
     </div>
 </div>
 
-<ul id=filter>
-    <li (click)= "defaultCountry='all'" [ngClass]="{'active': defaultCountry=='all'}">
-        [all]</li>
-    <li (click)= "defaultCountry='us'" [ngClass]="{'active': defaultCountry=='us'}">
-        [us]</li>
-    <li (click)= "defaultCountry='it'" [ngClass]="{'active': defaultCountry=='it'}">
-        [it]</li>
-</ul>
-
+<div id="filter">
+    <select size="1" [(ngModel)]="defaultCountry">
+        <option value="all" selected>All</option>
+        <option *ngFor="let country of countries" value="{{ country }}">{{ country }}</option>
+    </select>
+</div>
