"UiModule is now correctly imported"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,5 @@
-<header>
-    <nav>
-        <ul>
-            <li>
-                <a [routerLink]="['home']">
-                    Home
-                </a>
-            </li>
-            <li>
-                <a [routerLink]="['login']">
-                    Login
-                </a>
-            </li>
-        </ul>
-    </nav>
-</header>
+<app-top-menu></app-top-menu>
 
 <router-outlet></router-outlet>
 
-<footer>
-    Here my footer
-</footer>
+<app-footer></app-footer>
