--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,12 @@
 <h1>Hey, I'm AppComponent, my title is {{ title | uppercase }}</h1>
 
 <div id="filter">
-  <!-- <select size="1" [(ngModel)]="defaultCountry">
-      <option value="all" selected>All</option>
-      <option *ngFor="let country of countries" value="{{ country }}">
-          {{ country }}</option>
-  </select> -->
-  
   <mat-form-field>
-      <mat-label>Countries</mat-label>
-      <mat-select size="1" [(ngModel)]="defaultCountry">
-          <mat-option value="all" selected>All</mat-option>
-          <mat-option *ngFor="let country of countries" value="{{ country }}">
-              {{ country }}
+      <mat-label>Years</mat-label>
+      <mat-select size="1" [(ngModel)]="year">
+          <mat-option [value]="0" selected>All</mat-option>
+          <mat-option *ngFor="let year of years" [value]="year">
+              {{ year }}
           </mat-option>
       </mat-select>
   </mat-form-field>
@@ -20,15 +14,9 @@
 </div>
 
 <p>Default country is : {{ defaultCountry }}</p>
+<p>Default year is : {{ year }}</p>
 <div class=movie *ngFor="let movie of movies">
-    <div *ngIf="(movie.country == defaultCountry) || defaultCountry == 'all'">
-        <!-- <h2 class = "truc title"
-        [ngClass]="{'old': movie.year < 2000, 'title': true }"
-        >
-        {{ movie.title }}
-        </h2>
-        <h3>{{ movie.year }}</h3>
-        <h3>{{ movie.country }}</h3> -->
+    <div *ngIf="movie.year == year || year == 0">
 
         <mat-card class="example-card">
             <mat-card-header>
