--- a/src/app/pages/home/search/search.component.html
+++ b/src/app/pages/home/search/search.component.html
@@ -2,7 +2,7 @@
 
 <div id="search-bar">
     <mat-form-field class="example-form-field">
-        <mat-label>Search a movie, actress...</mat-label>
+        <mat-label>Search a movie, actress, director...</mat-label>
         <input matInput type="text" [(ngModel)]="value">
         <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
         <mat-icon>close</mat-icon>
