"Search byTitle() connected to the back (ChildToParent emit/receive event) WORKS"

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
   <h1>Homepage : {{ title | uppercase }}</h1>
 
   <div id="search-component">
-    <app-search></app-search>
+    <app-search (moviesEvent)="receiveMoviesEvent($event)"></app-search>
   </div>
 
   <div id="filter">
