"the search bar is now blue"

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -13,6 +13,10 @@ div {
     position: relative;
 }
 
+#search-component {
+    background-color: cadetblue;
+}
+
 .movie {
     margin: inherit;
     position: inherit;
