--- a/src/app/pages/home/search/search.component.html
+++ b/src/app/pages/home/search/search.component.html
@@ -1,16 +1,26 @@
-<!-- <p>SEARCH COMPONENT BEGINS HERE</p> -->
-
-<div id="search-bar">
+<form [formGroup]="searchForm">
     <mat-form-field class="example-form-field">
         <mat-label>Search a movie, actress, director...</mat-label>
-        <input matInput type="text" [(ngModel)]="value">
-        <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+        <input 
+            matInput 
+            type="search"
+            placeholder="Ex. Joker"
+            formControlName="searchTerm"
+        >
+        <button 
+            mat-button 
+            *ngIf="searchTerm" 
+            matSuffix 
+            mat-icon-button 
+            aria-label="Clear" 
+            (click)="clearSearchTerm()"
+        >
         <mat-icon>close</mat-icon>
         </button>
     </mat-form-field>
-</div>
-
-<div id="search-button">
-    <button mat-raised-button (click)="validateSearch()">OK</button>
-</div>  
-<!-- <p>SEARCH COMPONENT ENDS HERE</p> -->
+    <button 
+    mat-raised-button 
+    (click)="validateSearch()"
+    [disabled]="searchForm.invalid"
+    >OK</button>    
+</form>
