--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -23,13 +23,35 @@ div {
     width: inherit;
     // width: 50%;
     // position: relative;
+    background-color: darkturquoise;
+
+    & .movie-card {
+        // position: inherit;
+        max-width: 300px;
+        max-height: 200px;
+        background-color: indianred;
+        margin-left: auto;
+        margin-right: auto;
+    
+        & .movie-header {
+            background-color: yellow;
+            margin-left: auto;
+            margin-right: auto;
+
+            & .movie-title {
+                background-color: green;
+                text-align: center;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+
+    }
 }
 
-.example-card {
-    // position: inherit;
-    max-width: 300px;
-    max-height: 200px;
-}
+
+
+
 
 #filter {
     position: relative; 
