"Commit before trying to put back the years"

--- a/src/app/pages/home/search/search.component.html
+++ b/src/app/pages/home/search/search.component.html
@@ -6,7 +6,7 @@
             type="search"
             placeholder="Ex. Joker"
             formControlName="searchTerm"
-            (change)="reload()"
+            (ngModelChange)="reload()"
         >
         <button 
             mat-button 
