--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -22,7 +22,7 @@
   <p>Default country is : {{ defaultCountry }}</p>
   <p>Default year is : {{ year }}</p>
 
-  <div class=movie *ngFor="let movie of movies">
+  <div class=movie *ngFor="let movie of movies | async">
       <div *ngIf="movie.year == year || year == 0">
 
           <mat-card class="movie-card">
