"Login page added with Mat-error implemented. Everything works"

--- a/src/app/pages/home/search/search.component.html
+++ b/src/app/pages/home/search/search.component.html
@@ -19,9 +19,12 @@
         <mat-icon>close</mat-icon>
         </button>
     </mat-form-field>
-    <button 
+
+    <!-- Bouton de validation -->
+    <!-- <button 
     mat-raised-button 
     (click)="searchByTitle()"
     [disabled]="searchForm.invalid"
-    >OK</button>    
+    >OK</button>     -->
+
 </form>
