"logout() also works"

--- a/src/app/shared/ui/top-menu/top-menu.component.html
+++ b/src/app/shared/ui/top-menu/top-menu.component.html
@@ -12,7 +12,8 @@
                 </a>
             </li>
             <li *ngIf="userService.isAuthenticated">
-                <a [routerLink]="['login']">
+                <a (click)="doLogout()"
+                   [routerLink]="['home']">
                     Logout
                 </a>
             </li>            
