--- a/src/app/shared/ui/top-menu/top-menu.component.html
+++ b/src/app/shared/ui/top-menu/top-menu.component.html
@@ -1,22 +1,28 @@
 <header>
     <nav>
         <ul>
+            
             <li>
                 <a [routerLink]="['home']">
+                    <mat-icon>home</mat-icon> 
                     Home
                 </a>
             </li>
             <li *ngIf="!userService.isAuthenticated">
                 <a [routerLink]="['login']">
+                    <mat-icon >lock</mat-icon>
                     Login
                 </a>
             </li>
             <li *ngIf="userService.isAuthenticated">
                 <a (click)="doLogout()"
                    [routerLink]="['home']">
+                   <mat-icon >lock_open</mat-icon>
                     Logout
                 </a>
             </li>            
         </ul>
+        <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" 
+              rel="stylesheet"> -->
     </nav>
 </header>
