--- a/src/app/shared/ui/top-menu/top-menu.component.html
+++ b/src/app/shared/ui/top-menu/top-menu.component.html
@@ -10,14 +10,14 @@
             </li>
             <li *ngIf="!userService.isAuthenticated">
                 <a [routerLink]="['login']">
-                    <mat-icon >lock</mat-icon>
+                    <mat-icon class="my-icons">lock</mat-icon>
                     Login
                 </a>
             </li>
             <li *ngIf="userService.isAuthenticated">
                 <a (click)="doLogout()"
                    [routerLink]="['home']">
-                   <mat-icon >lock_open</mat-icon>
+                   <mat-icon class="my-icons">lock_open</mat-icon>
                     Logout
                 </a>
             </li>            
