"now the footer shows if the user is connected"

--- a/src/app/shared/ui/footer/footer.component.html
+++ b/src/app/shared/ui/footer/footer.component.html
@@ -1,3 +1,5 @@
 <footer>
-    Here my footer
+    <span *ngIf="user">
+        <em>You are connected as {{ user.login }}</em>
+    </span>
 </footer>
