"added icons to movie buttons in HomeComponents. Gotta link Details to a method now"

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -43,8 +43,14 @@
                 <p>{{ movie.synopsis}}</p>
               </mat-card-content>
               <mat-card-actions>
-                <button mat-button>LIKE</button>
-                <button mat-button>SHARE</button>
+                <button mat-button>
+                  Fav it
+                  <mat-icon>favorite</mat-icon>  
+                </button>
+                <button mat-button >
+                  Details
+                  <mat-icon>add</mat-icon>
+                </button>
               </mat-card-actions>
             </mat-card>
       </div>
