--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -43,11 +43,12 @@
                 <p>{{ movie.synopsis}}</p>
               </mat-card-content>
               <mat-card-actions>
-                <button mat-button>
+                <button mat-stroked-button (click)="doFavorite()">
                   Fav it
                   <mat-icon>favorite</mat-icon>  
                 </button>
-                <button mat-button >
+                <button mat-stroked-button 
+                        (click)="doDetails( movie.idMovie )">
                   Details
                   <mat-icon>add</mat-icon>
                 </button>
@@ -56,4 +57,14 @@
       </div>
   </div>
 
+  <mat-form-field>
+    <mat-label>Snack bar duration (seconds)</mat-label>
+    <input type="number" [(ngModel)]="durationInSeconds" matInput>
+  </mat-form-field>
+  
+  <button mat-stroked-button (click)="openSnackBar()" aria-label="Show an example snack-bar">
+    Pizza party
+  </button>
+
+  
 </div>
