"In order to change the synopsis, the elements are in place, I just have to connect it to the back"

--- a/src/app/pages/home/search/search.component.html
+++ b/src/app/pages/home/search/search.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="searchForm">
-    <mat-form-field class="example-form-field">
+    <mat-form-field class="form-field">
         <mat-label>Search a movie, actress, director...</mat-label>
         <input 
             matInput 
