"I did the delete() in movieService, it doesn't work yet nor is it called in the delete component, that's next step"

--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -35,4 +35,9 @@
         [disabled]="movieForm.invalid"
         >Update synopsis</button>    
 
+    <button 
+    mat-raised-button 
+    (click)="validateDelete()"
+    >Delete movie</button>    
+
 </form>
