--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -43,12 +43,24 @@
                 <p>{{ movie.synopsis}}</p>
               </mat-card-content>
               <mat-card-actions>
-                <button mat-stroked-button (click)="doFavorite()">
-                  Fav it
-                  <mat-icon>favorite</mat-icon>  
-                </button>
+  
+                    <mat-icon 
+                      (click)="likeIt(movie)"
+                      *ngIf="movie.likes == 0"
+                    >
+                    favorite_border</mat-icon> 
+                    <mat-icon
+                      *ngIf="movie.likes > 0"
+                      matBadge="{{ movie.likes }}"
+                      matBadgeColor="warn"
+                    >
+                    </mat-icon> 
+
+                    <mat-icon
+                    >favorite</mat-icon> 
+                
                 <button mat-stroked-button 
-                        (click)="doDetails( movie.idMovie )">
+                        (click)="detailFilm( movie.idMovie )">
                   Details
                   <mat-icon>add</mat-icon>
                 </button>
