"updated from JL GitHub version, everything works : likes do work and it's sent to all clients. But you can only do 1 like on a movie in total"

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -54,13 +54,10 @@
                       matBadge="{{ movie.likes }}"
                       matBadgeColor="warn"
                     >
-                    </mat-icon> 
+                    favorite</mat-icon> 
 
-                    <mat-icon
-                    >favorite</mat-icon> 
-                
                 <button mat-stroked-button 
-                        (click)="detailFilm( movie.idMovie )">
+                        (click)="moveTo( movie.idMovie )">
                   Details
                   <mat-icon>add</mat-icon>
                 </button>
