"The animations NTH to make the like-heart grow and ungrow work"

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -47,12 +47,14 @@
                     <mat-icon 
                       (click)="likeIt(movie)"
                       *ngIf="movie.likes == 0"
+                      [@heartGrowing]='movie.animationState'
                     >
                     favorite_border</mat-icon> 
                     <mat-icon
                       *ngIf="movie.likes > 0"
                       matBadge="{{ movie.likes }}"
                       matBadgeColor="warn"
+                      [@heartSmalling]='movie.animationState'
                     >
                     favorite</mat-icon> 
 
