--- a/src/app/shared/ui/top-menu/top-menu.component.html
+++ b/src/app/shared/ui/top-menu/top-menu.component.html
@@ -20,7 +20,9 @@
                    <mat-icon class="my-icons">lock_open</mat-icon>
                     Logout
                 </a>
-            </li>            
+            </li>    
         </ul>
     </nav>
+
+    <app-language-switcher></app-language-switcher>
 </header>
