--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,10 +19,22 @@
     
   </div>
 
+  <!-- // TODO : translate les résultats sous cette forme -->
+  <!-- <p> {{ 'moviesListing.moviesResult' | translate }}</p>   -->
+
+  <!-- <p *ngIf="movieService.movieCounter > 1"> {{ movieService.movieCounter }} résultats trouvés</p>
+  <p *ngIf="movieService.movieCounter == 1"> Un seul résultat trouvé</p>
+  <p *ngIf="movieService.movieCounter< 1"> Aucun résultat trouvé</p>  -->
+
+  <p *ngIf="(moviesOb | async) ?.length > 1"> {{ (moviesOb | async) ?.length }} résultats trouvés</p>
+  <p *ngIf="(moviesOb | async) ?.length == 1"> Un seul résultat trouvé : </p>
+  <p *ngIf="(moviesOb | async) ?.length < 1"> Aucun résultat trouvé ! </p>
+
+
   <p>Default country is : {{ defaultCountry }}</p>
   <p>Default year is : {{ year }}</p>
 
-  <div class=movie *ngFor="let movie of movies | async">
+  <div class=movie *ngFor="let movie of moviesOb | async">
       <div *ngIf="movie.year == year || year == 0">
      
           <mat-card class="movie-card">
