--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -47,7 +47,7 @@
                     {{ movie.title }}
                   </a>
                 </mat-card-title>
-                <mat-card-subtitle>{{ movie.year }} ({{ movie.country }})</mat-card-subtitle>
+                <mat-card-subtitle>{{ movie.year }} ({{ movie.elapsedTime }}) ({{ movie.country }})</mat-card-subtitle>
               </mat-card-header>
 
               <img mat-card-image src="{{ movie.imgSrc }}" alt="{{ movie.imgAlt }}">
