"Added the register page but the methode createAccout() does not work yet and we have to check if the routing is OK and if the token is necessary"

--- a/src/app/shared/ui/top-menu/top-menu.component.html
+++ b/src/app/shared/ui/top-menu/top-menu.component.html
@@ -20,7 +20,13 @@
                    <mat-icon class="my-icons">lock_open</mat-icon>
                     Logout
                 </a>
-            </li>    
+            </li>  
+            <li>
+                <a [routerLink]="['register']">
+                   <mat-icon class="my-icons">face</mat-icon>
+                    Register
+                </a>
+            </li>      
         </ul>
     </nav>
 
