--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,58 +1,75 @@
 .content {
-    margin: auto;
-    width: 50%;
+    margin:100px auto;
+    width: 74%;
     padding: 10px;
     text-align: center;
 
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-div {
-    position: relative;
+    h1{
+        font-size: 2rem;
+        color: #fff;
+        font-family: 'bangers';
+        font-size: 3rem;
+        letter-spacing: 16px;
+        margin-bottom: 38px;
+    }
+    p{
+        color:#fff;
+    }
 }
 
 #search-component {
-    background-color: cadetblue;
+    background-color: #b5e1f0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px 0;
 }
 
 .movie {
-    margin: inherit;
-    position: inherit;
-    width: inherit;
-    // width: 50%;
-    // position: relative;
-    background-color: darkturquoise;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    flex-wrap: wrap;
 
     & .movie-card {
-        // position: inherit;
-        max-width: 300px;
-        max-height: 200px;
-        background-color: lightblue;
-        margin-left: auto;
-        margin-right: auto;
-    
+        width: 400px;
+        background-color: rgba(183, 226, 240,.85);
+        height: 200px;
+        margin: 10px;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-bottom: 26px;
+        
         & .movie-header {
-            // background-color: yellow;
-            margin-left: auto;
-            margin-right: auto;
-
-            & .movie-title {
-                // background-color: green;
-                text-align: center;
-                margin-left: auto;
-                margin-right: auto;
+         margin: auto;
+         mat-card-title{
+             font-family: 'Special elite';
+             font-size: 1.6rem;
+             a{
+                color:rgb(55, 3, 80);
+                text-decoration: none;
+             }
+         }
+        }
+        mat-card-subtitle{
+            margin-top: 20px;
+        }
+        mat-card-actions{
+            display: flex;
+            justify-content: space-around;
+            width: 64%;
+            margin: auto;
+            .favorite{
+                cursor: pointer;
+                font-size: 1.6rem;
+                &:hover{
+                 color: rgb(106, 46, 134) !important;
+                }   
             }
         }
-
     }
 }
 
 
-
-
-
-#filter {
-    position: relative; 
-}
