--- a/src/app/shared/ui/top-menu/top-menu.component.scss
+++ b/src/app/shared/ui/top-menu/top-menu.component.scss
@@ -1,3 +1,24 @@
-ul {
-    
+header{
+    position: fixed;
+    width: 100%;
+    margin-top: -115px;
+    z-index: 999;
+    nav>ul{
+        background-color: rgba(0,0,0,.7);
+        box-shadow: 2px 2px 8px #666;
+        display: flex;
+        justify-content: space-around;
+        padding: 20px 0;
+        list-style-type: none;
+        align-items: center;
+        li>a{
+            color: #fff;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            &:hover{
+                color: skyblue;
+            }
+        }
+    }
 }
