--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+     margin: 0;padding: 0;
+      font-family: Roboto, "Helvetica Neue", sans-serif; 
+      background-image: url("https://lecoindescritiquescine.com/wp-content/uploads/2017/10/Blade-Runner-2049-Movie-Wallpapers-71.jpg");
+      background-repeat: no-repeat;  
+      background-attachment: fixed;
+      background-size: cover;
+    }
