unlike ok bithout anim

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -69,11 +69,13 @@
             </mat-icon>
             
             <mat-icon class="favorite" 
-                      *ngIf="movie.likes > 0" 
+                      *ngIf="movie.likes > 0"
+                      (click)="unLikeIt(movie)" 
                       matBadge="{{ movie.likes }}" 
                       matBadgeColor="warn"
                       [@heartSmalling]='movie.animationState'>
-              favorite</mat-icon>
+              favorite
+            </mat-icon>
 
           </mat-card-actions>
         </mat-card>
