change login notification, now in header

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -69,6 +69,7 @@
             </mat-icon>
             
             <mat-icon class="favorite" 
+                      title="Remove from favorite" 
                       *ngIf="movie.likes > 0"
                       (click)="unLikeIt(movie)" 
                       matBadge="{{ movie.likes }}" 
