--- a/src/app/shared/ui/top-menu/top-menu.component.scss
+++ b/src/app/shared/ui/top-menu/top-menu.component.scss
@@ -21,4 +21,10 @@ header{
             }
         }
     }
+    .infos{
+        display: flex;
+        justify-content: space-between;
+        color: #fff;
+        margin-right: 120px;
+    }
 }
