--- a/src/app/shared/ui/top-menu/top-menu.component.html
+++ b/src/app/shared/ui/top-menu/top-menu.component.html
@@ -1,10 +1,10 @@
 <header>
     <nav>
         <ul>
-            
+
             <li>
                 <a [routerLink]="['home']">
-                    <mat-icon>home </mat-icon> 
+                    <mat-icon>home </mat-icon>
                     Home
                 </a>
             </li>
@@ -15,20 +15,23 @@
                 </a>
             </li>
             <li *ngIf="userService.user">
-                <a (click)="doLogout()"
-                   [routerLink]="['home']">
-                   <mat-icon class="my-icons">lock_open </mat-icon>
+                <a (click)="doLogout()" [routerLink]="['home']">
+                    <mat-icon class="my-icons">lock_open </mat-icon>
                     Logout
                 </a>
-            </li>  
+            </li>
             <li>
                 <a [routerLink]="['register']">
-                   <mat-icon class="my-icons">face </mat-icon>
+                    <mat-icon class="my-icons">face </mat-icon>
                     Register
                 </a>
-            </li>      
+            </li>
         </ul>
     </nav>
-
-    <app-language-switcher></app-language-switcher>
+    <div class="infos">
+        <app-language-switcher></app-language-switcher>
+        <span *ngIf="user">
+            <em>You are connected as {{ user.login }}</em>
+        </span>
+    </div>
 </header>
