--- a/src/app/shared/ui/language-switcher/language-switcher.component.scss
+++ b/src/app/shared/ui/language-switcher/language-switcher.component.scss
@@ -8,7 +8,7 @@ ul{
         cursor: pointer;
         color:#fff;
         &:hover{
-            color: #aaa;
+            color: skyblue;
         }
     }
 }
