--- a/src/app/shared/ui/top-menu/top-menu.component.html
+++ b/src/app/shared/ui/top-menu/top-menu.component.html
@@ -14,14 +14,17 @@
                     Login
                 </a>
             </li>
-            <li *ngIf="userService.user">
+            <li *ngIf="userService.user" class="connected-as">
                 <a (click)="doLogout()" [routerLink]="['home']">
                     <mat-icon class="my-icons">lock_open </mat-icon>
                     Logout
                 </a>
             </li>
+            <li *ngIf="user">
+                <em>Connected as <span> {{ user.login }} </span></em>
+            </li>
             <li>
-                <a [routerLink]="['register']">
+                <a [routerLink]="['register']" >
                     <mat-icon class="my-icons">face </mat-icon>
                     Register
                 </a>
@@ -29,9 +32,9 @@
         </ul>
     </nav>
     <div class="infos">
+        <i class="material-icons" title="register as admin">
+            verified_user
+        </i>
         <app-language-switcher></app-language-switcher>
-        <span *ngIf="user">
-            <em>You are connected as {{ user.login }}</em>
-        </span>
     </div>
 </header>
