update design, nav bar, add log as admin button

--- a/src/app/shared/ui/top-menu/top-menu.component.html
+++ b/src/app/shared/ui/top-menu/top-menu.component.html
@@ -32,7 +32,7 @@
         </ul>
     </nav>
     <div class="infos">
-        <i class="material-icons" title="register as admin">
+        <i class="material-icons" title="Log as admin">
             verified_user
         </i>
         <app-language-switcher></app-language-switcher>
